--- a/templates/inventory/update_user.html
+++ b/templates/inventory/update_user.html
@@ -46,7 +46,7 @@
       {% endif %}
       {% if editing and not changing_password %}
         <div class="form-group">
-          <button type="submit" name="update" class="btn-submit">Update</button>
+          <button type="submit" name="update" class="btn-submit">Save</button>
         </div>
       {% endif %}
     </form>
