--- a/templates/auths/forgot_password.html
+++ b/templates/auths/forgot_password.html
@@ -14,10 +14,8 @@
     {% csrf_token %}
 
     {{ form.as_p }}
-    <div>
-      <span><a href="{% url 'forgot_password' %}">Forgot password</a>?</span>
-    </div><br />
-    <button type="submit" class="btn btn-primary">Login</button> <span>Want to <a href="{% url 'register_company' %}">create a company</a>?</span>
+
+    <button type="submit" name="send_otp" class="btn btn-primary">Send OTP</button>
   </form>
 
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
