--- a/templates/inventory/admin_panel.html
+++ b/templates/inventory/admin_panel.html
@@ -7,6 +7,11 @@
     <h2 class="mb-4">Admin Panel</h2>
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4 rounded shadow-sm">
       <div class="container-fluid justify-content-center">
+        {% if request.user.company %}
+          {% if request.user|is_owner %}
+            <a href="{% url 'update_company' %}" class="btn btn-outline-primary px-4 me-3">Company Information</a>
+          {% endif %}
+        {% endif %}
         <a href="{% url 'history' %}" class="btn btn-outline-primary px-4 me-3">History</a>
         <a href="{% url 'add_eng' %}" class="btn btn-outline-primary px-4 me-3">Add Engineer</a>
         <a href="{% url 'register' %}" class="btn btn-outline-primary px-4 me-3">Add User</a>
