--- a/templates/inventory/update_item.html
+++ b/templates/inventory/update_item.html
@@ -21,7 +21,7 @@
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   "><span style="color: rgba(0, 0, 0, 0.77);">Part Number:</span><span style="font-weight: bolder;
-    color: rgb(212, 123, 5);">{{ item.item.part_number }}</span></span>
+    color: rgb(212, 123, 5);">{{ item.part_number }}</span></span>
     <span style="font-weight: bolder;
     color: rgb(212, 123, 5);"></span>
     {% if item.arrived and not item.is_used %}
