--- a/templates/inventory/update_warehouse_item.html
+++ b/templates/inventory/update_warehouse_item.html
@@ -23,11 +23,11 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-  ">{{ item.part_number }}</span>
+  ">{{ warehouse_item.part_number }}</span>
   </h2>
 
   <section class="form-section">
-    <h3>{{ item.item.name }}</h3>
+    <h3>{{ item.name }}</h3>
     <form action="" method="POST" enctype="multipart/form-data" class="form-container">
       {% csrf_token %}
       <div class="form-group">
@@ -54,19 +54,19 @@
   <!-- Job Summary Section -->
 
   <section class="items-list">
-    <h3><strong>Item</strong>:{{ item.name }}</h3>
+    <h3><strong>Item</strong>:{{ warehouse_item.name }}</h3>
     <ul class="item-items">
       <li class="item-item">
         <div class="item-info">
           <h4>{{ item.name }} - {{ warehouse_item.get_status_display }}</h4>
-          {% if item.item.image %}
-            <img class="item-img" src="{{ item.image.url }}" alt="{{ item.name }}" />
+          {% if warehouse_item.image %}
+            <img class="item-img" src="{{ warehouse_item.image.url }}" alt="{{ warehouse_item.name }}" />
           {% endif %}
           <p>
-            <strong>Reference:</strong> {{ item.reference }}
+            <strong>Reference:</strong> {{ warehouse_item.reference }}
           </p>
           <p>
-            <strong>Added by:</strong> {{ item.added_by.username }} <br /><strong>At</strong>: {{ item.added_date }}
+            <strong>Added by:</strong> {{ warehouse_item.added_by.username }} <br /><strong>At</strong>: {{ warehouse_item.added_date }}
           </p>
         </div>
       </li>
