--- a/templates/auths/login.html
+++ b/templates/auths/login.html
@@ -2,26 +2,41 @@
 {% load static %}
 
 {% block body %}
-  <h1>Login</h1>
-  {% if messages %}
-    {% for message in messages %}
-      <div class="alert alert-{{ message.tags }}">
-        <p>{{ message|safe }}</p> {% comment %}dded safe as django skip html{% endcomment %}
-      </div>
-    {% endfor %}
-  {% endif %}
-  <form action="" method="POST">
-    {% csrf_token %}
+  <div class="d-flex justify-content-center align-items-center vh-100 bg-light">
+    <div class="card shadow-lg p-4 rounded-4" style="min-width: 400px; max-width: 500px;">
+      <h1 class="text-center mb-4">Login</h1>
 
-    {{ form.as_p }}
-    <div>
-      <span><a href="{% url 'forgot_password' %}">Forgot password</a>?</span>
-    </div><br />
-    <button type="submit" class="btn btn-primary">Login</button> <span>Want to <a href="{% url 'register_company' %}">create a company</a>?</span>
-  </form>
+      {% if messages %}
+        {% for message in messages %}
+          <div class="alert alert-{{ message.tags }} text-center">{{ message|safe }}</div>
+        {% endfor %}
+      {% endif %}
+
+      <form action="" method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+
+        <div class="d-flex justify-content-between align-items-center mb-3">
+          <a href="{% url 'forgot_password' %}">Forgot password?</a>
+        </div>
+
+        <button type="submit" class="btn btn-primary w-100">Login</button>
+      </form>
+
+      <hr class="my-4" />
+
+      <p class="text-center">
+        Want to <a href="{% url 'register_company' %}">create a company</a>?
+      </p>
+
+      <div class="text-center mt-3">
+        <h5>Still not sure?</h5>
+        <a href="{% url 'create_guest' %}" class="btn btn-outline-secondary w-100">Try as Guest</a>
+      </div>
+    </div>
+  </div>
 
   <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 {% endblock %}
